create a shared library to make creating wallets easier. (#1130)
* create a shared library whose API presents the complicated or time consuming functions needed for creating and sending transactions

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -62,6 +62,7 @@ LIBBITCOIN_ZMQ=libdash_zmq.a
 endif
 if BUILD_BITCOIN_LIBS
 LIBBITCOINCONSENSUS=libdashconsensus.la
+LIBBITCOINCORE=libdashcore.la
 endif
 if ENABLE_WALLET
 LIBBITCOIN_WALLET=libdash_wallet.a
@@ -97,7 +98,7 @@ EXTRA_LIBRARIES += \
   $(LIBBITCOIN_WALLET) \
   $(LIBBITCOIN_ZMQ)
 
-lib_LTLIBRARIES = $(LIBBITCOINCONSENSUS)
+lib_LTLIBRARIES = $(LIBBITCOINCORE) $(LIBBITCOINCONSENSUS)
 
 bin_PROGRAMS =
 noinst_PROGRAMS =
@@ -439,6 +440,31 @@ libdash_wallet_a_SOURCES = \
   wallet/coinselection.cpp \
   $(BITCOIN_CORE_H)
 
+libdashcore_a_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES)
+libdashcore_a_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
+
+libdashcore_a_SOURCES = \
+  bytzlib/bytzlib.cpp \
+  script/sigcommon.cpp \
+  hash.cpp \
+  hash.h \
+  key.cpp \
+  key.h \
+  primitives/transaction.cpp \
+  primitives/transaction.h \
+  pubkey.cpp \
+  pubkey.h \
+  random.cpp \
+  random.h \
+  support/cleanse.cpp \
+  support/cleanse.h \
+  uint256.cpp \
+  uint256.h \
+  utilstrencodings.cpp \
+  utilstrencodings.h \
+  utiltime.cpp \
+  utiltime.h
+
 # crypto primitives library
 crypto_libdash_crypto_base_a_CPPFLAGS = $(AM_CPPFLAGS) $(PIC_FLAGS)
 crypto_libdash_crypto_base_a_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS) $(PIC_FLAGS)
@@ -573,6 +599,7 @@ libdash_consensus_a_SOURCES = \
   script/script.h \
   script/script_error.cpp \
   script/script_error.h \
+  script/sigcommon.cpp \
   serialize.h \
   span.h \
   streams.h \
@@ -724,6 +751,22 @@ dash_tx_LDADD = \
   $(LIBSECP256K1)
 
 dash_tx_LDADD += $(BACKTRACE_LIB) $(BOOST_LIBS) $(CRYPTO_LIBS) $(BLS_LIBS)
+#
+
+# dashcore library #
+if BUILD_BITCOIN_LIBS
+libdashcore_la_SOURCES = $(libdashcore_a_SOURCES) $(crypto_libdash_crypto_a_SOURCES)
+
+if GLIBC_BACK_COMPAT
+  libdashcore_la_SOURCES += compat/glibc_compat.cpp
+endif
+
+libdashcore_la_LDFLAGS = $(AM_LDFLAGS) $(SSL_LIBS) $(CRYPTO_LIBS) $(BOOST_LIBS) -no-undefined $(RELDFLAGS)
+libdashcore_la_LIBADD = $(LIBSECP256K1)
+libdashcore_la_CPPFLAGS = $(AM_CPPFLAGS) -I$(BOOST_CPPFLAGS) -I$(builddir)/obj -I$(srcdir)/secp256k1/include -DBUILD_BITCOIN_INTERNAL
+libdashcore_la_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
+
+endif
 #
 
 # dashconsensus library #
