Refactor Script interpreter as a "virtual machine" encapsulated by a class.
Refactor script interpreter into a virtual machine, add access via cashlib and python, and more precise script error reporting.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -456,6 +456,10 @@ libdashcore_a_SOURCES = \
   pubkey.h \
   random.cpp \
   random.h \
+  script/interpreter.cpp \
+  script/interpreter.h \
+  script/script.cpp \
+  script/script.h \
   support/cleanse.cpp \
   support/cleanse.h \
   uint256.cpp \
