Load POS blocks
- Add POS flags to CBlockIndex
- Set coinbase maturity to 10 for blocks with height < 10
- Skip time checks before Midas activation
- Add validation and signature functions
- Adapt block format

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -218,6 +218,7 @@ BITCOIN_CORE_H = \
   policy/feerate.h \
   policy/fees.h \
   policy/policy.h \
+  pos/blocksignature.h \
   pow.h \
   protocol.h \
   random.h \
@@ -350,6 +351,7 @@ libdash_server_a_SOURCES = \
   noui.cpp \
   policy/fees.cpp \
   policy/policy.cpp \
+  pos/blocksignature.cpp \
   pow.cpp \
   rest.cpp \
   rpc/blockchain.cpp \
