--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -219,6 +219,8 @@ BITCOIN_CORE_H = \
   policy/fees.h \
   policy/policy.h \
   pos/blocksignature.h \
+  pos/kernel.h \
+  pos/stakeinput.h \
   pow.h \
   protocol.h \
   random.h \
@@ -352,6 +354,8 @@ libdash_server_a_SOURCES = \
   policy/fees.cpp \
   policy/policy.cpp \
   pos/blocksignature.cpp \
+  pos/kernel.cpp \
+  pos/stakeinput.cpp \
   pow.cpp \
   rest.cpp \
   rpc/blockchain.cpp \
