--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -234,6 +234,7 @@ BITCOIN_CORE_H = \
   random.h \
   reverse_iterator.h \
   reverselock.h \
+  reward-manager.h \
   rpc/blockchain.h \
   rpc/client.h \
   rpc/mining.h \
@@ -441,6 +442,7 @@ libdash_wallet_a_SOURCES = \
   keepass.cpp \
   pos/staker.cpp \
   pos/staking-manager.cpp \
+  reward-manager.cpp \
   tokens/rpctokenwallet.cpp \
   tokens/tokengroupwallet.cpp \
   wallet/crypter.cpp \
