Finalize (pooled) mining support
- Include token rewards for miners in getblocktemplate
- Generate blocks with version 11 until start of the hybrid phase
- Enable X11 hashing for POW blocks during hybrid phase
- [FIX] Set minimum difficulty for first hybrid POW block
- Partial hybrid mining support
- Add CReward and CBlockReward classes to manage complex fee and reward structures
- Add block type version bit field that denotes POS or POW during Hybrid phase
- Streamline block generation
- [FIX] Only update block time for non-POS blocks when mining
- [FIX] Remove staking check from SelectCoins()
- [FIX] Check coinstake input values when validating new blocks

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -226,6 +226,7 @@ BITCOIN_CORE_H = \
   pos/blocksignature.h \
   pos/checks.h \
   pos/kernel.h \
+  pos/rewards.h \
   pos/stakeinput.h \
   pos/staker.h \
   pos/staking-manager.h \
@@ -382,6 +383,7 @@ libdash_server_a_SOURCES = \
   pos/blocksignature.cpp \
   pos/checks.cpp \
   pos/kernel.cpp \
+  pos/rewards.cpp \
   pos/stakeinput.cpp \
   pow.cpp \
   rest.cpp \
