Separate token structure classes from token consensus functionality

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -264,6 +264,7 @@ BITCOIN_CORE_H = \
   threadsafety.h \
   threadinterrupt.h \
   timedata.h \
+  tokens/groups.h \
   tokens/tokendb.h \
   tokens/tokengroupconfiguration.h \
   tokens/tokengroupdescription.h \
@@ -657,6 +658,7 @@ libdash_common_a_SOURCES = \
   script/sign.cpp \
   script/standard.cpp \
   script/tokengroup.cpp \
+  tokens/groups.cpp \
   tokens/tokendb.cpp \
   tokens/rpctokens.cpp \
   tokens/tokengroupconfiguration.cpp \
