--- a/contrib/init/bytzd.conf
+++ b/contrib/init/bytzd.conf
@@ -4,12 +4,12 @@ start on runlevel [2345]
 stop on starting rc RUNLEVEL=[016]
 
 env BITCOIND_BIN="/usr/bin/bytzd"
-env BITCOIND_USER="bytzcore"
-env BITCOIND_GROUP="bytzcore"
+env BITCOIND_USER="bytz"
+env BITCOIND_GROUP="bytz"
 env BITCOIND_PIDDIR="/var/run/bytzd"
 # upstart can't handle variables constructed with other variables
 env BITCOIND_PIDFILE="/var/run/bytzd/bytzd.pid"
-env BITCOIND_CONFIGFILE="/etc/bytzcore/bytz.conf"
+env BITCOIND_CONFIGFILE="/etc/bytz/bytz.conf"
 env BITCOIND_DATADIR="/var/lib/bytzd"
 
 expect fork
