--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,6 @@
 FROM phusion/baseimage:bionic-1.0.0
 LABEL maintainer="Bytz Developers <dev@bytz.gg>"
-LABEL description="Dockerised BytzCore, built from Travis"
+LABEL description="Dockerised Bytz, built from Travis"
 
 ARG USER_ID
 ARG GROUP_ID
@@ -12,7 +12,7 @@ ENV USER_ID ${USER_ID:-1000}
 ENV GROUP_ID ${GROUP_ID:-1000}
 RUN groupadd -g ${GROUP_ID} bytz
 RUN useradd -u ${USER_ID} -g bytz -s /bin/bash -m -d /bytz bytz
-RUN mkdir /bytz/.bytzcore
+RUN mkdir /bytz/.bytz
 RUN chown bytz:bytz -R /bytz
 
 COPY bin/* /usr/local/bin/
