--- a/configure.ac
+++ b/configure.ac
@@ -8,7 +8,7 @@ define(_CLIENT_VERSION_IS_RELEASE, true)
 define(_COPYRIGHT_YEAR, 2021)
 define(_COPYRIGHT_HOLDERS,[The %s developers])
 define(_COPYRIGHT_HOLDERS_SUBSTITUTION,[[Bytz Core]])
-AC_INIT([Bytz Core],[_CLIENT_VERSION_MAJOR._CLIENT_VERSION_MINOR._CLIENT_VERSION_REVISION],[https://github.com/bytzcurrency/bytz/issues],[bytzcore],[https://bytz.gg/])
+AC_INIT([Bytz Core],[_CLIENT_VERSION_MAJOR._CLIENT_VERSION_MINOR._CLIENT_VERSION_REVISION],[https://github.com/bytzcurrency/bytz/issues],[bytz],[https://bytz.gg/])
 AC_CONFIG_SRCDIR([src/validation.cpp])
 AC_CONFIG_HEADERS([src/config/bytz-config.h])
 AC_CONFIG_AUX_DIR([build-aux])
