--- a/contrib/linearize/example-linearize.cfg
+++ b/contrib/linearize/example-linearize.cfg
@@ -1,7 +1,7 @@
 # bytzd RPC settings (linearize-hashes)
 rpcuser=someuser
 rpcpassword=somepassword
-#datadir=~/.bytzcore
+#datadir=~/.bytz
 host=127.0.0.1
 port=9998
 
@@ -10,7 +10,7 @@ max_height=3130000
 
 # bootstrap.dat input/output settings (linearize-data)
 netmagic=bf0c6bbd
-input=/home/example/.bytzcore/blocks
+input=/home/example/.bytz/blocks
 
 # "output" option causes blockchain files to be written to the given location,
 # with "output_file" ignored. If not used, "output_file" is used instead.
