--- a/docker/Dockerfile.GitHubActions
+++ b/docker/Dockerfile.GitHubActions
@@ -1,6 +1,6 @@
 FROM ubuntu:bionic
 LABEL maintainer="Bytz Developers <dev@bytz.gg>"
-LABEL description="Dockerised BytzCore"
+LABEL description="Dockerised Bytz"
 
 ARG USER_ID
 ARG GROUP_ID
@@ -13,7 +13,7 @@ ENV USER_ID ${USER_ID:-1000}
 ENV GROUP_ID ${GROUP_ID:-1000}
 RUN groupadd -g ${GROUP_ID} bytz && \
     useradd -u ${USER_ID} -g bytz -s /bin/bash -m -d /bytz bytz  && \
-    mkdir /bytz/.bytzcore && \
+    mkdir /bytz/.bytz && \
     chown bytz:bytz -R /bytz
 
 RUN apt-get update && \
@@ -24,10 +24,10 @@ RUN apt-get update && \
 
 RUN mach=$(uname -m) \
       && case $mach in armv7l) arch="arm-linux-gnueabihf"; ;; aarch64) arch="aarch64-linux-gnu"; ;; x86_64) arch="x86_64-linux-gnu"; ;;  *) echo "ERROR: Machine type $mach not supported."; ;; esac \
-      && wget https://github.com/bytzcurrency/bytz/releases/download/v${TAG}/bytzcore-${TAG}-$arch.tar.gz -P /tmp \
-      && tar -xvf /tmp/bytzcore-*.tar.gz -C /tmp/ \
-      && cp /tmp/bytzcore*/bin/*  /usr/local/bin \
-      && rm -rf /tmp/bytzcore* \
+      && wget https://github.com/bytzcurrency/bytz/releases/download/v${TAG}/bytz-${TAG}-$arch.tar.gz -P /tmp \
+      && tar -xvf /tmp/bytz-*.tar.gz -C /tmp/ \
+      && cp /tmp/bytz*/bin/*  /usr/local/bin \
+      && rm -rf /tmp/bytz* \
       && chmod a+x /usr/local/bin/*
 
 USER bytz
